[package]
name = "MapVisualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_pixel_buffer = "0.7.1"
noisy_bevy = "0.6"
rand = "0.8.5"

[dependencies.bevy]
version = "0.13"
features = ["jpeg"]